x-ui-override-disable and items of type string on all array types

--- a/modules/aws_eventbridge/default/0.1/facets.yaml
+++ b/modules/aws_eventbridge/default/0.1/facets.yaml
@@ -56,6 +56,9 @@ spec:
               type: array
               title: Targets
               description: The targets to invoke when the rule is triggered
+              items:
+                type: string
+              x-ui-override-disable: true
       required:
       - is_enabled
       - description
