--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -194,6 +194,7 @@ spec:
                       items:
                         type: string
                       x-ui-command: true
+                      x-ui-override-disable: true
               required:
               - exec
             postStart:
@@ -213,6 +214,7 @@ spec:
                       items:
                         type: string
                       x-ui-command: true
+                      x-ui-override-disable: true
               required:
               - exec
           x-ui-toggle: true
@@ -224,6 +226,7 @@ spec:
           items:
             type: string
           x-ui-command: true
+          x-ui-override-disable: true
         args:
           type: array
           title: Arguments
@@ -231,6 +234,7 @@ spec:
           items:
             type: string
           x-ui-command: true
+          x-ui-override-disable: true
         health_checks:
           type: object
           title: Health Checks
@@ -322,6 +326,9 @@ spec:
                 field: spec.runtime.health_checks.readiness_check_type
                 values: ["ExecCheck"]
               description: Commands for readiness check
+              items:
+                type: string
+              x-ui-override-disable: true
             liveness_check_type:
               type: string
               title: Liveness Check Type
@@ -405,6 +412,9 @@ spec:
                 field: "spec.runtime.health_checks.liveness_check_type"
                 values: ["ExecCheck"]
               description: Commands for liveness
+              items:
+                type: string
+              x-ui-override-disable: true
           required:
           - readiness_port
           - readiness_url
@@ -937,6 +947,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 args:
                   type: array
                   title: Arguments
@@ -944,6 +955,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 size:
                   type: object
                   title: Size
@@ -1204,6 +1216,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 args:
                   type: array
                   title: Arguments
@@ -1211,6 +1224,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 size:
                   type: object
                   title: Size
@@ -1499,6 +1513,9 @@ spec:
                         field: spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type
                         values: ["ExecCheck"]
                       description: Commands for readiness check
+                      items:
+                        type: string
+                      x-ui-override-disable: true
                     liveness_check_type:
                       type: string
                       title: Liveness Check Type
@@ -1570,6 +1587,9 @@ spec:
                         field: "spec.sidecars.{{this}}.runtime.health_checks.liveness_check_type"
                         values: ["ExecCheck"]
                       description: Commands for liveness
+                      items:
+                        type: string
+                      x-ui-override-disable: true
                     port:
                       type: string
                       title: Health Check Port
