--- a/modules/redis/elasticache/0.2/facets.yaml
+++ b/modules/redis/elasticache/0.2/facets.yaml
@@ -1,6 +1,6 @@
 intent: redis
 flavor: elasticache
-version: 0.2
+version: '0.2'
 description: Adds redis module of flavor elasticache
 clouds:
   - aws
