--- a/modules/kafka/msk/0.1/facets.yaml
+++ b/modules/kafka/msk/0.1/facets.yaml
@@ -3,11 +3,10 @@ flavor: msk
 version: "0.1"
 description: Adds Kafka module of MSK flavor
 clouds:
-  - aws
+- aws
 spec:
   title: Kafka spec
   type: object
-  additionalProperties: false
   properties:
     authenticated:
       type: boolean
@@ -18,32 +17,32 @@ spec:
       title: Kafka Version
       description: Version of kafka e.g. 3.2.3
       enum:
-        - 1.1.1
-        - 2.1.0
-        - 2.2.1
-        - 2.3.1
-        - 2.4.1
-        - 2.4.1.1
-        - 2.5.1
-        - 2.6.0
-        - 2.6.1
-        - 2.6.2
-        - 2.6.3
-        - 2.7.0
-        - 2.7.1
-        - 2.7.2
-        - 2.8.0
-        - 2.8.1
-        - 2.8.2-tiered
-        - 3.1.1
-        - 3.2.0
-        - 3.3.1
-        - 3.3.2
-        - 3.4.0
-        - 3.5.1
-        - 3.6.0
-        - 3.7.1
-        - 3.8.0
+      - 1.1.1
+      - 2.1.0
+      - 2.2.1
+      - 2.3.1
+      - 2.4.1
+      - 2.4.1.1
+      - 2.5.1
+      - 2.6.0
+      - 2.6.1
+      - 2.6.2
+      - 2.6.3
+      - 2.7.0
+      - 2.7.1
+      - 2.7.2
+      - 2.8.0
+      - 2.8.1
+      - 2.8.2-tiered
+      - 3.1.1
+      - 3.2.0
+      - 3.3.1
+      - 3.3.2
+      - 3.4.0
+      - 3.5.1
+      - 3.6.0
+      - 3.7.1
+      - 3.8.0
     persistence_enabled:
       type: boolean
       title: Persistence Enabled
@@ -63,21 +62,21 @@ spec:
               title: Instance
               description: Kafka instance type
               enum:
-                - kafka.t3.small
-                - kafka.m5.large
-                - kafka.m7g.large
-                - kafka.m5.xlarge
-                - kafka.m7g.xlarge
-                - kafka.m5.2xlarge
-                - kafka.m7g.2xlarge
-                - kafka.m5.4xlarge
-                - kafka.m7g.4xlarge
-                - kafka.m5.8xlarge
-                - kafka.m7g.8xlarge
-                - kafka.m5.12xlarge
-                - kafka.m7g.12xlarge
-                - kafka.m5.16xlarge
-                - kafka.m7g.16xlarge
+              - kafka.t3.small
+              - kafka.m5.large
+              - kafka.m7g.large
+              - kafka.m5.xlarge
+              - kafka.m7g.xlarge
+              - kafka.m5.2xlarge
+              - kafka.m7g.2xlarge
+              - kafka.m5.4xlarge
+              - kafka.m7g.4xlarge
+              - kafka.m5.8xlarge
+              - kafka.m7g.8xlarge
+              - kafka.m5.12xlarge
+              - kafka.m7g.12xlarge
+              - kafka.m5.16xlarge
+              - kafka.m7g.16xlarge
             instance_count:
               type: integer
               title: Instance Count
@@ -90,10 +89,11 @@ spec:
               description: Volume request in kubernetes persistent volumes
               pattern: "^[0-9]+[G]i?$"
               x-ui-placeholder: "Enter volume size"
-              x-ui-error-message: "Volume must be specified in the correct format with integer only (e.g., '10Gi' or '50Gi')."
-              x-ui-visible-if: 
+              x-ui-error-message: "Volume must be specified in the correct format
+                with integer only (e.g., '10Gi' or '50Gi')."
+              x-ui-visible-if:
                 field: spec.persistence_enabled
-                values: [ true ]
+                values: [true]
           required: ["instance", "instance_count", "volume"]
       required: ["kafka"]
   required: ["authenticated", "kafka_version", "persistence_enabled", "size"]
