--- a/modules/network/gcp_vpc/0.1/facets.yaml
+++ b/modules/network/gcp_vpc/0.1/facets.yaml
@@ -6,8 +6,8 @@ description: Adds network - gcp vpc flavor
 clouds:
 - gcp
 outputs:
-- name: default
-  type: "@output/gcp_vpc"
+  default:
+    type: "@outputs/gcp_vpc"
 spec:
   title: network
   description: Specification of the network for gcp vpc flavor
