--- a/modules/redis/memorystore/0.2/facets.yaml
+++ b/modules/redis/memorystore/0.2/facets.yaml
@@ -1,6 +1,6 @@
 intent: redis
 flavor: memorystore
-version: 0.2
+version: '0.2'
 description: Adds redis module of flavor memorystore
 clouds:
   - gcp
