Standardize spec for json schema (#361)
* Add missing pattern properties

* x-ui-override-disable and items of type string on all array types

* Fix misc problems

--- a/modules/network/gcp_vpc/0.1/facets.yaml
+++ b/modules/network/gcp_vpc/0.1/facets.yaml
@@ -4,10 +4,10 @@ alias-flavors: ["default"]
 version: "0.1"
 description: Adds network - gcp vpc flavor
 clouds:
-  - gcp
+- gcp
 outputs:
-  - name: default
-    type: "@output/gcp_vpc"
+  default:
+    type: "@outputs/gcp_vpc"
 spec:
   title: network
   description: Specification of the network for gcp vpc flavor
