--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -37,40 +37,41 @@ spec:
       x-ui-override-disable: true
       x-ui-toggle: true
       patternProperties:
-        type: object
-        title: PVC
-        description: Define volume details
-        properties:
-          access_mode:
-            title: Access Mode
-            type: string
-            enum:
-            - ReadWriteOnce
-            - ReadWriteMany
-            description: Define read-write access of the pvc
-          storage_size:
-            type: string
-            title: Storage Size
-            description: The storage size of the pvc , it should be specified like
-              `10Gi`
-            minLength: 1
-            pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\\
-              .[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\\
-              .[0-9]+)?|64000)Mi$"
-            x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
-            x-ui-error-message: "Value doesn't match pattern, it should be number
-              ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
-          path:
-            type: string
-            title: Path
-            description: Path to mount the PVC
-            pattern: "^(/[^/]+)*(/)?$"
-            x-ui-error-message: "Value doesn't match pattern, eg: / or /<path> etc"
-            x-ui-placeholder: "Enter the storage size, eg. /data/temp"
-        required:
-        - access_mode
-        - path
-        - storage_size
+        "^[a-zA-Z0-9_-]*$":
+          type: object
+          title: PVC
+          description: Define volume details
+          properties:
+            access_mode:
+              title: Access Mode
+              type: string
+              enum:
+              - ReadWriteOnce
+              - ReadWriteMany
+              description: Define read-write access of the pvc
+            storage_size:
+              type: string
+              title: Storage Size
+              description: The storage size of the pvc , it should be specified like
+                `10Gi`
+              minLength: 1
+              pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\\
+                .[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\\
+                .[0-9]+)?|64000)Mi$"
+              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number
+                ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+            path:
+              type: string
+              title: Path
+              description: Path to mount the PVC
+              pattern: "^(/[^/]+)*(/)?$"
+              x-ui-error-message: "Value doesn't match pattern, eg: / or /<path> etc"
+              x-ui-placeholder: "Enter the storage size, eg. /data/temp"
+          required:
+          - access_mode
+          - path
+          - storage_size
     enable_host_anti_affinity:
       type: boolean
       title: Enable Host Anti-Affinity
@@ -190,6 +191,7 @@ spec:
           items:
             type: string
           x-ui-command: true
+          x-ui-override-disable: true
         args:
           type: array
           title: Arguments
@@ -197,6 +199,7 @@ spec:
           items:
             type: string
           x-ui-command: true
+          x-ui-override-disable: true
         health_checks:
           type: object
           title: Health Checks
@@ -288,6 +291,9 @@ spec:
                 field: spec.runtime.health_checks.readiness_check_type
                 values: ["ExecCheck"]
               description: Commands for readiness check
+              items:
+                type: string
+              x-ui-override-disable: true
             liveness_check_type:
               type: string
               title: Liveness Check Type
@@ -371,6 +377,9 @@ spec:
                 field: "spec.runtime.health_checks.liveness_check_type"
                 values: ["ExecCheck"]
               description: Commands for liveness
+              items:
+                type: string
+              x-ui-override-disable: true
           required:
           - readiness_port
           - readiness_url
@@ -896,6 +905,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 args:
                   type: array
                   title: Arguments
@@ -903,6 +913,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 size:
                   type: object
                   title: Size
@@ -1163,6 +1174,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 args:
                   type: array
                   title: Arguments
@@ -1170,6 +1182,7 @@ spec:
                   items:
                     type: string
                   x-ui-command: true
+                  x-ui-override-disable: true
                 size:
                   type: object
                   title: Size
@@ -1458,6 +1471,9 @@ spec:
                         field: spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type
                         values: ["ExecCheck"]
                       description: Commands for readiness check
+                      items:
+                        type: string
+                      x-ui-override-disable: true
                     liveness_check_type:
                       type: string
                       title: Liveness Check Type
@@ -1529,6 +1545,9 @@ spec:
                         field: "spec.sidecars.{{this}}.runtime.health_checks.liveness_check_type"
                         values: ["ExecCheck"]
                       description: Commands for liveness
+                      items:
+                        type: string
+                      x-ui-override-disable: true
                     port:
                       type: string
                       title: Health Check Port
