--- a/modules/network/azure_vpc/0.1/facets.yaml
+++ b/modules/network/azure_vpc/0.1/facets.yaml
@@ -3,10 +3,10 @@ flavor: azure_vpc
 version: "0.1"
 description: Adds network - azure vpc flavor
 clouds:
-  - azure
+- azure
 outputs:
-  - name: default
-    type: "@output/azure_vpc"
+  default:
+    type: "@outputs/azure_vpc"
 spec:
   title: network
   description: Specification of the network for azure vpc flavor
