--- a/modules/cloud_account/gcp/0.1/facets.yaml
+++ b/modules/cloud_account/gcp/0.1/facets.yaml
@@ -3,6 +3,7 @@ alias-flavors: ["default"]
 flavor: gcp
 lifecycle: ENVIRONMENT
 version: "0.1"
+description: "cloud_account - gcp"
 depends_on: []
 input_type: instance
 composition: {}
