--- a/modules/config_map/k8s/0.2/facets.yaml
+++ b/modules/config_map/k8s/0.2/facets.yaml
@@ -1,18 +1,20 @@
 intent: config_map
 flavor: k8s
 version: '0.2'
+description: "config_map - k8s"
 clouds:
-  - aws
-  - azure
-  - gcp
-  - kubernetes
+- aws
+- azure
+- gcp
+- kubernetes
 spec:
   type: object
   properties:
     data:
       title: Data
       type: object
-      description: "Enter a valid key-value pair for config-map in YAML format. Eg. key: value (provide a space after ':' as expected in the YAML format)"
+      description: "Enter a valid key-value pair for config-map in YAML format. Eg.
+        key: value (provide a space after ':' as expected in the YAML format)"
       x-ui-yaml-editor: true
       x-ui-placeholder: "Enter the value of the config. Eg. key: config_value"
 sample:
