--- a/modules/cloud_account/default/0.1/facets.yaml
+++ b/modules/cloud_account/default/0.1/facets.yaml
@@ -1,6 +1,6 @@
-intent: "cloud_account"
+intent: cloud_account
 flavor: default
-version: "0.1"
+version: '0.1'
 description: Module to configure and provision resources within a cloud account
 clouds:
 - aws
@@ -14,46 +14,45 @@ spec:
       description: Select the cloud account to use (must be previously linked)
       title: Cloud Account
       type: string
+      x-ui-typeable: true
       x-ui-api-source:
-        endpoint: /cc-ui/v1/accounts/
-        filterConditions:
-          - field: accountType
-            value: CLOUD
-          - field: provider
-            type: dynamic
-            value: spec.cloud_provider
-        labelKey: name
+        endpoint: "/cc-ui/v1/accounts/"
         method: GET
+        labelKey: name
+        valueKey: name
+        filterConditions:
+        - field: accountType
+          value: CLOUD
+        - field: provider
+          value: spec.cloud_provider
         params:
           includeContent: false
-        valueKey: name
     cloud_provider:
       default: aws
       description: Select the cloud provider (AWS, GCP, Azure)
       enum:
-        - AWS
-        - GCP
-        - AZURE
+      - AWS
+      - GCP
+      - AZURE
       title: Cloud Provider
       type: string
   required:
-    - cloud_provider
-    - cloud_account
+  - cloud_provider
+  - cloud_account
   title: Cloud Account Manager
   type: object
   x-ui-order:
-    - cloud_provider
-    - cloud_account
-
+  - cloud_provider
+  - cloud_account
 outputs:
   default:
-    type: "@outputs/cloud_account"
+    type: '@outputs/cloud_account'
     providers:
       azurerm:
         source: hashicorp/azurerm
         version: 2.52.0
         attributes:
-          features: { }
+          features: {}
           subscription_id: attributes.subscription_id
           client_id: attributes.client_id
           client_secret: attributes.client_secret
@@ -62,7 +61,7 @@ outputs:
         source: hashicorp/azurerm3
         version: 3.52.0
         attributes:
-          features: { }
+          features: {}
           subscription_id: attributes.subscription_id
           client_id: attributes.client_id
           client_secret: attributes.client_secret
@@ -90,7 +89,7 @@ outputs:
           credentials: attributes.credentials
       aws:
         source: hashicorp/aws
-        version: "= 3.74.0"
+        version: = 3.74.0
         attributes:
           region: attributes.aws_region
           skip_region_validation: true
@@ -101,7 +100,7 @@ outputs:
               external_id: attributes.external_id
       aws4:
         source: hashicorp/aws4
-        version: "= 4.53.0"
+        version: = 4.53.0
         attributes:
           region: attributes.aws_region
           skip_region_validation: true
@@ -112,7 +111,7 @@ outputs:
               external_id: attributes.external_id
       aws5:
         source: hashicorp/aws5
-        version: "= 5.49.0"
+        version: = 5.49.0
         attributes:
           region: attributes.aws_region
           skip_region_validation: true
@@ -122,8 +121,11 @@ outputs:
               session_name: attributes.session_name
               external_id: attributes.external_id
 sample:
-  version: "0.1"
+  version: '0.1'
   flavor: default
   kind: cloud_account
   disabled: false
   spec: {}
+iac:
+  validated_files:
+  - variables.tf
