updated filter type

--- a/modules/cloud_account/default/0.1/facets.yaml
+++ b/modules/cloud_account/default/0.1/facets.yaml
@@ -24,6 +24,7 @@ spec:
         - field: accountType
           value: CLOUD
         - field: provider
+          type: dynamic
           value: spec.cloud_provider
         params:
           includeContent: false
