updated filter type

--- a/modules/cloud_account/default/0.1/facets.yaml
+++ b/modules/cloud_account/default/0.1/facets.yaml
@@ -16,7 +16,7 @@ spec:
       type: string
       x-ui-typeable: true
       x-ui-api-source:
-        endpoint: "/cc-ui/v1/accounts/"
+        endpoint: /cc-ui/v1/accounts/
         method: GET
         labelKey: name
         valueKey: name
